--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
+    "serve": "SET NODE_OPTIONS=--openssl-legacy-provider && SET 'NODE_ENV=development' && vue-cli-service serve",
     "build": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service build",
-    "lint": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint"
+    "lint": "SET NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service lint",
+    "start": "npm run build && cd desktop-wrapper && npm run start",
+    "proxy": "SET 'ALLOW_ORIGIN=*' && cors-proxy start"
   },
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.6.0",
@@ -17,9 +19,11 @@
     "vue": "^2.6.14"
   },
   "devDependencies": {
+    "@isomorphic-git/cors-proxy": "^2.7.1",
     "@vue/cli-plugin-babel": "~5.0.4",
     "@vue/cli-plugin-eslint": "~4.5.17",
     "@vue/cli-service": "~4.5.0",
+    "@vue/runtime-dom": "^3.5.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
